--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -4,7 +4,8 @@
   "sodium.option_impact.high": "High",
   "sodium.option_impact.extreme": "Extreme",
   "sodium.option_impact.varies": "Varies",
-  "sodium.option_flag.requires_game_restart": "Requires Restart",
+  "sodium.option_impact.tooltip": "Performance Impact: %s",
+  "sodium.option_flag.requires_game_restart.tooltip": "Requires restart to take effect",
   "sodium.options.pages.quality": "Quality",
   "sodium.options.pages.performance": "Performance",
   "sodium.options.pages.advanced": "Advanced",
@@ -50,7 +51,6 @@
   "sodium.options.allow_direct_memory_access.tooltip": "If enabled, some critical code paths will be allowed to use direct memory access for performance. This often greatly reduces CPU overhead for chunk and entity rendering, but can make it harder to diagnose some bugs and crashes. You should only disable this if you've been asked to or otherwise know what you're doing.",
   "sodium.options.enable_memory_tracing.name": "Enable Memory Tracing",
   "sodium.options.enable_memory_tracing.tooltip": "Debugging feature. If enabled, stack traces will be collected alongside memory allocations to help improve diagnostic information when memory leaks are detected.",
-  "sodium.options.performance_impact_string": "Performance Impact: %s",
   "sodium.options.use_persistent_mapping.name": "Use Persistent Mapping",
   "sodium.options.use_persistent_mapping.tooltip": "If enabled, a small amount of memory will be persistently mapped for speeding up chunk updates and entity rendering.\n\nRequires OpenGL 4.4 or ARB_buffer_storage.",
   "sodium.options.chunk_memory_allocator.name": "Chunk Memory Allocator",
