--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -51,12 +51,6 @@
   "sodium.options.allow_direct_memory_access.tooltip": "If enabled, some critical code paths will be allowed to use direct memory access for performance. This often greatly reduces CPU overhead for chunk and entity rendering, but can make it harder to diagnose some bugs and crashes. You should only disable this if you've been asked to or otherwise know what you're doing.",
   "sodium.options.enable_memory_tracing.name": "Enable Memory Tracing",
   "sodium.options.enable_memory_tracing.tooltip": "Debugging feature. If enabled, stack traces will be collected alongside memory allocations to help improve diagnostic information when memory leaks are detected.",
-  "sodium.options.use_persistent_mapping.name": "Use Persistent Mapping",
-  "sodium.options.use_persistent_mapping.tooltip": "If enabled, a small amount of memory will be persistently mapped for speeding up chunk updates and entity rendering.\n\nRequires OpenGL 4.4 or ARB_buffer_storage.",
-  "sodium.options.chunk_memory_allocator.name": "Chunk Memory Allocator",
-  "sodium.options.chunk_memory_allocator.tooltip": "Selects the memory allocator that will be used for chunk rendering.\n- ASYNC: Fastest option, works well with most modern graphics drivers.\n- SWAP: Fallback option for older graphics drivers. May increase memory usage significantly.",
-  "sodium.options.chunk_memory_allocator.async": "Async",
-  "sodium.options.chunk_memory_allocator.swap": "Swap",
   "sodium.options.chunk_update_threads.name": "Chunk Update Threads",
   "sodium.options.chunk_update_threads.tooltip": "Specifies the number of threads to use for chunk building. Using more threads can speed up chunk loading and update speed, but may negatively impact frame times.",
   "sodium.options.always_defer_chunk_updates.name": "Always Defer Chunk Updates",
@@ -67,11 +61,10 @@
   "sodium.options.use_model_instancing.tooltip": "If enabled, supported models will be packed into VBOs and instanced. This removes unnecessary uploads to the GPU by only sending transformations for existing vertices. This also removes many unnecessary draw calls by batching together many similar entities. This can drastically improve framerate when many entities are visible.",
   "sodium.options.enable_api_debug.name": "Enable API Debug",
   "sodium.options.enable_api_debug.tooltip": "If enabled, the graphics API will be placed into debug mode, which will produce more detailed and useful logs for developers. This may have some overhead when enabled, so disable it unless necessary.",
-  "sodium.options.terrain_draw_mode.name": "Terrain Draw Mode",
-  "sodium.options.terrain_draw_mode.tooltip": "Selects the draw mode that will be used for terrain rendering.\n- Default: Attempts to select the best option for your GPU.\n- BaseVertex: Most compatible option, but consumes slightly more video memory and may be slightly slower.\n- Indirect: Fastest option for some GPUs, but may cause graphical glitches on buggy drivers.\n- IndirectCount: Slower than Indirect, but may fix graphical issues for some GPUs. (Requires OpenGL 4.6 core or ARB_indirect_parameters)",
-  "sodium.options.terrain_draw_mode.base_vertex": "BaseVertex",
-  "sodium.options.terrain_draw_mode.indirect": "Indirect",
-  "sodium.options.terrain_draw_mode.indirect_count": "IndirectCount",
+  "sodium.options.chunk_renderer_backend.name": "Chunk Renderer Backend",
+  "sodium.options.chunk_renderer_backend.tooltip": "Selects the backend that will be used for rendering chunk geometry.\n- Default: Attempts to select the best option for your GPU.\n- BaseVertex: Most compatible option, but consumes slightly more video memory and may be slightly slower.\n- Indirect: Fastest option for some GPUs, but may cause graphical glitches on buggy drivers.",
+  "sodium.options.chunk_renderer_backend.base_vertex": "BaseVertex",
+  "sodium.options.chunk_renderer_backend.indirect": "Indirect",
   "sodium.options.translucent_face_sorting.name": "Translucent Face Sorting",
   "sodium.options.translucent_face_sorting.tooltip": "If enabled, translucent effects from surfaces such as stained glass and water will be applied correctly. This uses a compute shader that is run on the GPU, but the CPU will still be impacted somewhat for dispatching.",
   "sodium.options.buttons.undo": "Undo",
