--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -11,6 +11,7 @@
   "sodium.options.simulation_distance.tooltip": "The simulation distance controls how far away terrain and entities will be loaded and ticked. Shorter distances can reduce the internal server's load and may improve frame rates.",
   "sodium.options.brightness.tooltip": "Controls the brightness (gamma) of the game.",
   "sodium.options.gui_scale.tooltip": "Sets the maximum scale factor to be used for the user interface. If 'auto' is used, then the largest scale factor will always be used.",
+  "sodium.options.fullscreen.resolution.tooltip": "Sets the resolution and refresh rate of the game in full-screen; Directly relates with whether vsync is enabled. (Currently requires you to un full-screen and re full-screen)",
   "sodium.options.fullscreen.tooltip": "If enabled, the game will display in full-screen (if supported).",
   "sodium.options.v_sync.tooltip": "If enabled, the game's frame rate will be synchronized to the monitor's refresh rate, making for a generally smoother experience at the expense of overall input latency. This setting might reduce performance if your system is too slow.",
   "sodium.options.fps_limit.tooltip": "Limits the maximum number of frames per second. This can help reduce battery usage and general system load when multi-tasking. If V-Sync is enabled, this option will be ignored unless it is lower than your display's refresh rate.",
