--- a/src/main/resources/assets/sodium/lang/id_id.json
+++ b/src/main/resources/assets/sodium/lang/id_id.json
@@ -44,9 +44,9 @@
   "sodium.options.animate_only_visible_textures.tooltip": "Jika diaktifkan, hanya tekstur beranimasi yang terlihat akan di-update. Ini dapat memberikan peningkatan signifikan terhadap frame rate di beberapa hardware, khususnya dengan resource pack yang berat. Jika anda mengalami isu dengan beberapa tekstur yang tidak dianimasikan, coba matikan opsi ini.",
   "sodium.options.cpu_render_ahead_limit.name": "CPU Render-Ahead Limit",
   "sodium.options.cpu_render_ahead_limit.tooltip": "Menentukan jumlah maksimal frame dimana CPU dapat menunggu GPU untuk menyelesaikan rendering. Nilai yang sangat rendah atau tinggi mungkin menyebabkan ketidakstabilan frame rate.",
-  "sodium.options.cpu_render_ahead_limit.value": "%s frame(s)",
-  "sodium.options.allow_direct_memory_access.name": "Allow Direct Memory Access",
-  "sodium.options.allow_direct_memory_access.tooltip": "If enabled, some critical code paths will be allowed to use direct memory access for performance. This often greatly reduces CPU overhead for chunk and entity rendering, but can make it harder to diagnose some bugs and crashes. You should only disable this if you've been asked to or otherwise know what you're doing.",
+  "sodium.options.cpu_render_ahead_limit.value": "%s frame",
+  "sodium.options.allow_direct_memory_access.name": "Izinkan Akses Memori Secara Langsung",
+  "sodium.options.allow_direct_memory_access.tooltip": "Jika diaktifkan, beberapa kode kritikal akan diperbolehkan untuk menggunakan akses memori secara langsung untuk meningkatkan performa. Ini sering mengurangi CPU overhead untuk rendering chunk dan entitas, tapi dapat mempersulit diagnosis bug dan crash. Anda sebaiknya mematikan opsi ini jika anda sudah diminta untuk mematikannya atau jika anda tau apa yang anda lakukan.",
   "sodium.options.enable_memory_tracing.name": "Enable Memory Tracing",
   "sodium.options.enable_memory_tracing.tooltip": "Debugging feature. If enabled, stack traces will be collected alongside memory allocations to help improve diagnostic information when memory leaks are detected.",
   "sodium.options.performance_impact_string": "Performance Impact: %s",
