--- a/src/main/resources/assets/sodium/lang/id_id.json
+++ b/src/main/resources/assets/sodium/lang/id_id.json
@@ -41,26 +41,26 @@
   "sodium.options.use_particle_culling.name": "Gunakan Particle Culling",
   "sodium.options.use_particle_culling.tooltip": "Jika diaktifkan, hanya partikel yang terlihat akan di-render. Ini dapat memberikan peningkatan secara signifikan terhadap frame rate ketika ada banyak partikel disekitar.",
   "sodium.options.animate_only_visible_textures.name": "Hanya Animasikan Tekstur Yang Terlihat",
-  "sodium.options.animate_only_visible_textures.tooltip": "Jika diaktifkan, hanya tekstur beranimasi yang terlihat akan di-update. Ini dapat memberikan peningkatan signifikan terhadap frame rate di beberapa hardware, khususnya dengan resource pack yang berat. Jika anda mengalami isu dengan beberapa tekstur yang tidak dianimasikan, coba matikan opsi ini.",
-  "sodium.options.cpu_render_ahead_limit.name": "CPU Render-Ahead Limit",
+  "sodium.options.animate_only_visible_textures.tooltip": "Jika diaktifkan, hanya tekstur beranimasi yang terlihat akan di-update. Ini dapat memberikan peningkatan signifikan terhadap frame rate di beberapa hardware, khususnya dengan resource pack yang berat. Jika anda mengalami isu dengan beberapa tekstur yang tidak dianimasikan, cobalah matikan opsi ini.",
+  "sodium.options.cpu_render_ahead_limit.name": "Batas CPU Render-Ahead",
   "sodium.options.cpu_render_ahead_limit.tooltip": "Menentukan jumlah maksimal frame dimana CPU dapat menunggu GPU untuk menyelesaikan rendering. Nilai yang sangat rendah atau tinggi mungkin menyebabkan ketidakstabilan frame rate.",
   "sodium.options.cpu_render_ahead_limit.value": "%s frame",
   "sodium.options.allow_direct_memory_access.name": "Izinkan Akses Memori Secara Langsung",
-  "sodium.options.allow_direct_memory_access.tooltip": "Jika diaktifkan, beberapa kode kritikal akan diperbolehkan untuk menggunakan akses memori secara langsung untuk meningkatkan performa. Ini sering mengurangi CPU overhead untuk rendering chunk dan entitas, tapi dapat mempersulit diagnosis bug dan crash. Anda sebaiknya mematikan opsi ini jika anda sudah diminta untuk mematikannya atau jika anda tau apa yang anda lakukan.",
-  "sodium.options.enable_memory_tracing.name": "Enable Memory Tracing",
-  "sodium.options.enable_memory_tracing.tooltip": "Debugging feature. If enabled, stack traces will be collected alongside memory allocations to help improve diagnostic information when memory leaks are detected.",
-  "sodium.options.performance_impact_string": "Performance Impact: %s",
-  "sodium.options.use_persistent_mapping.name": "Use Persistent Mapping",
-  "sodium.options.use_persistent_mapping.tooltip": "If enabled, a small amount of memory will be persistently mapped as a staging buffer for chunk uploading, helping to reduce CPU overhead and frame time instability when loading or updating chunks.\n\nRequires OpenGL 4.4 or ARB_buffer_storage.",
+  "sodium.options.allow_direct_memory_access.tooltip": "Jika diaktifkan, beberapa kode kritikal akan diperbolehkan untuk menggunakan akses memori secara langsung untuk meningkatkan performa. Ini seringkali mengurangi CPU overhead untuk rendering chunk dan entitas, tapi dapat mempersulit diagnosis bug dan crash. Anda sebaiknya mematikan opsi ini jika anda diminta untuk mematikannya atau jika anda tau apa yang anda lakukan.",
+  "sodium.options.enable_memory_tracing.name": "Gunakan Memory Tracing",
+  "sodium.options.enable_memory_tracing.tooltip": "Fitur debugging. Jika diaktifkan, stack trace akan dikumpulkan bersama dengan alokasi memori untuk membantu meningkatkan informasi diagnostik saat kebocoran memori terdeteksi.",
+  "sodium.options.performance_impact_string": "Pengaruh Terhadap Performa: %s",
+  "sodium.options.use_persistent_mapping.name": "Gunakan Persistent Mapping",
+  "sodium.options.use_persistent_mapping.tooltip": "Jika diaktifkan, sebagian kecil memori akan digunakan sebagai staging buffer untuk pengunggahan chunk, membantu mengurangi CPU overhead dan ketidakstabilan frame time saat memuat atau memperbarui chunk.\n\nMemerlukan OpenGL 4.4 atau ARB_buffer_storage.",
   "sodium.options.chunk_memory_allocator.name": "Chunk Memory Allocator",
-  "sodium.options.chunk_memory_allocator.tooltip": "Selects the memory allocator that will be used for chunk rendering.\n- ASYNC: Fastest option, works well with most modern graphics drivers.\n- SWAP: Fallback option for older graphics drivers. May increase memory usage significantly.",
+  "sodium.options.chunk_memory_allocator.tooltip": "Menentukan memory allocator yang akan digunakan untuk rendering chunk.\n- ASYNC: Opsi tercepat, bekerja baik dengan banyak driver grafik modern.\n- SWAP: Opsi cadangan untuk driver grafik lama. Mungkin menambah penggunaan memori secara signifikan.",
   "sodium.options.chunk_memory_allocator.async": "Async",
   "sodium.options.chunk_memory_allocator.swap": "Swap",
   "sodium.options.chunk_update_threads.name": "Chunk Update Threads",
-  "sodium.options.chunk_update_threads.tooltip": "Specifies the number of threads to use for chunk building. Using more threads can speed up chunk loading and update speed, but may negatively impact frame times.",
+  "sodium.options.chunk_update_threads.tooltip": "Menentukan jumlah thread yang digunakan untuk membangun chunk. Menggunakan lebih banyak thread dapat mempercepat pemuatan chunk dan update chunk, tetapi dapat memberikan pengaruh buruk terhadap frame time.",
   "sodium.options.always_defer_chunk_updates.name": "Always Defer Chunk Updates",
-  "sodium.options.always_defer_chunk_updates.tooltip": "If enabled, rendering will never wait for chunk updates to finish, even if they are important. This can greatly improve frame rates in some scenarios, but it may create significant visual lag in the world.",
-  "sodium.options.buttons.undo": "Undo",
-  "sodium.options.buttons.apply": "Apply",
-  "sodium.options.buttons.donate": "Buy us a coffee!"
+  "sodium.options.always_defer_chunk_updates.tooltip": "Jika diaktifkan, rendering tidak akan menunggu chunk update untuk menyelesaikan tugasnya, bahkan jika itu penting. Ini dapat meningkatkan frame rate di beberapa skenario, tetapi mungkin dapat menimbulkan visual lag di world.",
+  "sodium.options.buttons.undo": "Urungkan",
+  "sodium.options.buttons.apply": "Terapkan",
+  "sodium.options.buttons.donate": "Belikan kita kopi!"
 }
